[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "test-renovate"
version = "0.1.0"
description = ""
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
readme = "README.md"
packages = [{include = "test_renovate"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.931"
requests = "^2.17.1"
flask = "2.0.2"
